Created a file select that successfully parses the STL file and creates a JS object with the STL data.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<h1>VOXELFY</h1>
 
 			<div style="background-color:white;">
-				test
+				<input type="file" id="files" name="files[]" />
 			</div>
 
 		</div>
