Added second scene to eventually hold voxel representation.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 		<div class="center">
 			<h1>VOXELFY</h1>
 
-			<div style="background-color:white;">
-				<input type="file" id="files" name="files[]" />
-			</div>
+			<p> A tool to convert a given STL file into a voxel representation of the object. </p>
 
+
+			<div style="background-color:white;">
+				<input type="file" id="files" name="files[]" text="choose STL file"/>
+			</div>
 		</div>
 		
 		<script src="js/three.js"></script>
